syntax = "proto3";

option java_multiple_files = true;
option java_package = "appcoreopc.Streamlogging";
option java_outer_classname = "StreamLogging";
option objc_class_prefix = "HLW";

package appcoreopc.Streamlogging;

// The greeting service definition.
service StreamLogging {
    // Sends a greeting
    rpc Log (stream LogRequest) returns (LogReply) {}   
}

message LogRequest {
    string id  = 1;
    string content = 2;
    string logType = 3; 
}

message LogReply {
    string id = 1;
    string content = 2;
    string logType = 3;    
}